fix issue when replypopup overflowing

--- a/frontend/src/app/styles/forum.module.css
+++ b/frontend/src/app/styles/forum.module.css
@@ -726,6 +726,7 @@
 }
 
 /*ReplyPopup Styles*/
+
 .reply_popup_container {
   position: fixed;
   z-index: 6;
@@ -733,21 +734,30 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgb(0, 0, 0, 0.5);
-  overflow-y: scroll;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 5px;
+  overflow-y: auto;
 }
+
 .reply_popup_container > div {
-  position: relative;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   max-width: 600px;
   width: 100%;
-  height: 400px;
   background-color: var(--lightGray);
+  max-height: 100%;
+  overflow-y: auto;
+  border-radius: 8px;
+  padding: 5px;
 }
 .reply_comment_details {
   margin-left: 15px;
+}
+#reply_popup_text_editor {
+  height: 300px;
 }
 .reply_popup_header {
   color: white;
